Fix remaining layout bugs on send input

--- a/app/pages/send/_index.scss
+++ b/app/pages/send/_index.scss
@@ -35,6 +35,7 @@
     cursor: pointer;
     display: block;
     margin-right: 5px;
+    flex-grow: 2;
 
     @include breakpoint(iphone5) {
       font-size: 16px;
@@ -49,7 +50,7 @@
   ._btn {
     @extend .hivebtn;
 
-    margin-top: 29px;
+    margin-top: 26px;
     padding: 0;
     width: 70px;
     height: 44px;
@@ -112,7 +113,6 @@
     padding-left: 10px;
     padding-right: 38px;
     border-radius: 2px;
-    margin-top: 3px;
     height: auto;
 
     &:active, &:focus {
